[package]
name = "infosechonors"
version = "0.1.0"
authors = ["Kevin B. Owens <owens.bradyn1999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.17"
tui = { version = "0.12", default-features = false, features = ['crossterm'] }
argh = "0.1.0"
anyhow = "1.0.34"
pcap = "0.7.0"